Fork for Paper/Purpur/Folia 1.21.11
Add full Folia support and update the plugin for Minecraft 1.21.11 while
keeping every command, listener, permission, config option and data format
identical to upstream ChatColor2.

Folia:
- Replace all BukkitScheduler usage with the region-aware schedulers via a
  new Schedulers helper (global, entity and async), including a shutdown
  path that runs pending work inline since neither Paper nor Folia accept
  new tasks during disable.
- Auto-save runs on the global region scheduler; confirmation timeouts run
  on the player entity scheduler; SQL reads/writes run on the async
  scheduler; GUI console commands dispatch from the global region; open
  GUIs close on the owning player thread.
- Make player data, GUI state, confirmations, paused players and the
  group/custom colour maps concurrent.

1.21.11:
- Registry-backed Sound lookup, keeping the existing gui.yml names working.
- Remove all removal-marked API usage.
- Initialise already-online players directly instead of constructing a
  PlayerJoinEvent.

Build:
- Java 21 and paper-api 1.21.11.
- Slimmer shaded jar and correctly relocated MariaDB META-INF/services.

Also fixes a modifier-set concurrent modification bug in the chat listener,
closes the SQL connection pool on disable, and parameterises the SQL
statements.